--- a/CSS/sign.css
+++ b/CSS/sign.css
@@ -107,6 +107,7 @@ button:hover {
   background-color: var(--gray2);
   border: 1px solid var(--gray3);
   border-radius: 8px;
+  margin-bottom: 100px;
 }
 
 .sns p {
