Edit margin-top in sing.css/header

--- a/Styles/sign.css
+++ b/Styles/sign.css
@@ -132,6 +132,9 @@ button:hover {
   body {
     padding: 0 32px;
   }
+  header {
+    margin-top: 120px;
+  }
   main {
     width: min(100%, 400px);
   }
